# fly-hole

./: .dockerignore  Cargo.toml  LICENSE  README.md  deploy  fly.toml  ios.mobileconfig  python.Dockerfile  rust.Dockerfile  start.sh
docs/: index.html  ios.mobileconfig
relay/: python.Dockerfile  run-tests  rust.Dockerfile
relay/e2e-tests/src/: conftest.py  dns_server_mock.py  requirements.txt  share.py  test_relay.py
relay/python/: doh_relay.py  requirements.txt
relay/rust/: Cargo.toml
relay/rust/src/: main.rs
