[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
ctrlc = "3.4.1"
http = "1.0.0"
num_cpus = "1.16.0"
querystring = "1.1.0"
rouille = "3.6.2"
simple-error = "0.3.0"
thread = "0.1.0"
tiny_http = "0.12.0"
url = "2.4.1"
